--- a/Adventure.html
+++ b/Adventure.html
@@ -63,51 +63,141 @@
             username: prompt("Enter your username:") || "Player", 
             startTime: new Date(),
             endTime: null,
-            score: 0,
-            level: 1,
-            choicesLog: []
+            choicesLog: [],
+            collectedShield: false,
+            collectedSword: false,
+            collectedBoots: false
         };
+
+        function getRandomInt(min, max) {
+            min = Math.ceil(min);  // round min up
+            max = Math.floor(max); // round max down
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
 
         function makeChoice(direction) {
             //Log the user's choice
             gameData.choicesLog.push({ choice: direction, timestamp: new Date().toISOString() });
             
-            //Adjust score and level based on the choices
             if (direction === 'left') {
-                gameData.score += 10;
                 story.textContent = "You encounter a mysterious old man. He offers you a choice: a map or a key. What do you take?";
                 choices.innerHTML = `
                     <a href="#" class="choice" onclick="makeChoice('map')">Take the Map</a>
-                    <a href="#" class="choice" onclick="makeChoice('key')">Take the Key</a>
-                `;
-            } else if (direction === 'right') {
-                gameData.score += 5;
+                    <a href="#" class="choice" onclick="makeChoice('key')">Take the Key</a>`;
+            } 
+            else if (direction === 'right') {
                 story.textContent = "You find a dark cave. Do you enter or go back?";
                 choices.innerHTML = `
-                    <a href="#" class="choice" onclick="makeChoice('enter')">Enter the Cave</a>
-                    <a href="#" class="choice" onclick="makeChoice('back')">Go Back</a>
-                `;
-            } else if (direction === 'map') {
-                gameData.score += 20;
-                gameData.level++;
-                story.textContent = "The map leads you to a hidden treasure chest. You win!";
-                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame()">Restart</a>`;
-            } else if (direction === 'key') {
-                gameData.score += 25;
-                gameData.level++;
-                story.textContent = "The key opens a locked door to freedom. You escape the forest and win!";
-                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame()">Restart</a>`;
-            } else if (direction === 'enter') {
-                gameData.score -= 10;
-                story.textContent = "Inside the cave, you find a sleeping dragon. It wakes up and you lose!";
-                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame()">Restart</a>`;
-            } else if (direction === 'back') {
-                gameData.score += 0;
+                    <a href="#" class="choice" onclick="makeChoice('enter1')">Enter the Cave</a>
+                    <a href="#" class="choice" onclick="makeChoice('back1')">Go Back</a>`;
+            } 
+            else if (direction === 'map') {
+                story.textContent = "On the map, there are two things marked, a red X, and an eerie building, which should you explore? ";
+                choices.innerHTML = `
+                    <a href="#" class="choice" onclick="makeChoice('red x')">Red X</a>
+                    <a href="#" class="choice" onclick="makeChoice('building')">Building</a>`;
+            } 
+            else if (direction === 'red x'){
+                gameData.collectedShield = true;
+                story.textContent = "You get to the red X, and there is a chest, you find a sturdy shield inside, this could protect you from traps."
+                choices.innerHTML = `<a href="#" class="choice" onclick="makeChoice('back2')">Go back</a>`;
+            }
+            else if (direction === 'building'){
+                story.textContent = "You enter the building, to be met with a ghost who scared you half to death, then you were killed by falling down a hole as you took another step."
+                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame('restart')">Restart</a>`;
+            }
+            else if (direction === 'key') {
+                story.textContent = "The key opens a locked door to an abandoned cottage, do you wish to explore the cottage?";
+                choices.innerHTML = `<a href="#" class="choice" onclick="makeChoice('explore1')">Explore Cottage</a>`;
+            } 
+            else if (direction === 'explore1'){
+                gameData.collectedSword = true;
+                story.textContent = "You head to the cellar and find a dead body with a sword in their chest, you may be able to go back and defend yourself.";
+                choices.innerHTML = `<a href="#" class="choice" onclick="makeChoice('back1')">Go back</a>`;
+            }
+            else if (direction === 'back2'){
+                story.textContent = 'You arrive at the cave with the trapped room do you wish to proceed or go back?'
+                choices.innerHTML = `
+                    <a href="#" class="choice" onclick="makeChoice('proceed')">Proceed</a>
+                    <a href="#" class="choice" onclick="makeChoice('back1')">Go back</a>`;
+            }
+            else if (direction === 'enter1') {
+                story.textContent = "Inside the cave, you encounter a trapped room, do you wish to proceed or go back?";
+                choices.innerHTML = `
+                    <a href="#" class="choice" onclick="makeChoice('proceed')">Proceed</a>
+                    <a href="#" class="choice" onclick="makeChoice('back2')">Go back</a>`;
+            } 
+            else if (direction === 'proceed' && gameData.collectedShield == true){
+                story.textContent = 'Your shield protected you from these traps, you continue to a room which has strange terrifying noises coming from it, do you enter or go back?'
+                choices.innerHTML = `
+                    <a href="#" class="choice" onclick="makeChoice('enter2')">Enter room</a>
+                    <a href="#" class="choice" onclick="makeChoice('enter1')">Go back</a>`;
+            }
+            else if (direction === 'proceed' && gameData.collectedShield == false){
+                story.textContent = "You enter the trapped room, and with nothing to defend yourself, you get shot by arrows in the darkness and quickly perished."
+                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame('restart')">Restart</a>`;
+            }
+            else if (direction === 'enter2' && gameData.collectedShield && gameData.collectedSword == true){
+                story.textContent = "You encountered a gang of grunting goblins, who attacked you swiftly, you use the shield and sword for protection and managed to kill them all."
+                choices.innerHTML = `<a href="#" class="choice" onclick="makeChoice('continue')">Continue</a>`;
+            }
+            else if(direction === 'enter2' && gameData.collectedShield == true){
+                story.textContent = "You encountered a gang of grunting goblins, who attacked you swiftly, unfortunately your shield wasn't enough to defeat them, they slowly broke you down and you were defeated."
+                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame('restart')">Restart</a>`;
+            }
+            else if(direction === 'enter2' && gameData.collectedSword == true){
+                story.textContent = "You encountered a gang of grunting goblins, who attacked you swiftly, only with a sword in hand you managed to kill a couple but it wasn't enough, they eventually grabbed your sword and you couldn't defend yourself."
+                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame('restart')">Restart</a>`;
+            }
+            else if (direction === 'continue'){
+                story.textContent = "This time you could feel an ominous tension which filled your thoughts, you could hear something stomping loudly in the next room, do you wish to follow it or explore more?"
+                choices.innerHTML = `
+                    <a href="#" class="choice" onclick="makeChoice('follow')">Follow noise</a>
+                    <a href="#" class="choice" onclick="makeChoice('explore2')">Explore</a>`;
+            }
+            else if (direction === 'follow'){
+                story.textContent = "As you walked into the room a sleeping dragon awaited you, do you try to creep past try to kill it, or go back? If you try to kill it you will have to roll a 4 or above on a six sided dice to win."
+                choices.innerHTML = `
+                    <a href="#" class="choice" onclick="makeChoice('creep past')">Creep past</a>
+                    <a href="#" class="choice" onclick="makeChoice('attempt kill')">Attempt to kill</a>
+                    <a href="#" class="choice" onclick="makeChoice('back3')">Go back</a>`;
+            }
+            else if (direction === 'explore2'){
+                gameData.collectedBoots = true;
+                story.textContent = "You walk into a small room which seemed dangerous, but to your surprise, wasn't. In the corner you see a pair of soft looking boots, you put them on."
+                choices.innerHTML = `<a href="#" class="choice" onclick="makeChoice('back3')">Go back</a>`;
+            }
+            else if (direction === 'back3'){
+                story.textContent = "You arrive back in the room with the ominous tension do you follow the noise, or explore?"
+                choices.innerHTML = `
+                <a href="#" class="choice" onclick="makeChoice('follow')">Follow noise</a>
+                <a href="#" class="choice" onclick="makeChoice('explore2')">Explore</a>`;
+            }
+            else if (direction === 'creep past' && gameData.collectedBoots == false){
+                story.textContent = "The dragon heard you, woke up and burned you to a crisp."
+                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame('restart')">Restart</a>`;
+            }
+            else if (direction === 'creep past' && gameData.collectedBoots == true){
+                story.textContent = "You successfully manouvered around the dragon quietly using the boots and found a chest full of gold, which then led to your escape, good job hero!"
+                choices.innerHTML = `<a href="#" class="choice" onclick="restartGame('restart')">Restart</a>`;
+            }
+            else if (direction === 'attempt kill'){
+                let attack = getRandomInt(1,6);
+                if (attack >= 4){
+                    story.textContent =  +attack+ " Rolled, You successfully ran and leaped and your sword passed through the mighty dragons skull, congrats you are a hero!"
+                    choices.innerHTML = `<a href="#" class="choice" onclick="restartGame('restart')">Restart</a>`;
+                }
+                else if (attack < 4){
+                    story.textContent = +attack+ " Rolled, You attempted to kill the dragon, you stumbled in the process, waking the dragon and sealing your fate, goodbye hero."
+                    choices.innerHTML = `<a href="#" class="choice" onclick="restartGame('restart')">Restart</a>`;
+                }
+                
+            }
+            else if (direction === 'back1') {
                 story.textContent = "You return to where you started. Do you go left or right?";
                 choices.innerHTML = `
                     <a href="#" class="choice" onclick="makeChoice('left')">Go Left</a>
-                    <a href="#" class="choice" onclick="makeChoice('right')">Go Right</a>
-                `;
+                    <a href="#" class="choice" onclick="makeChoice('right')">Go Right</a>`;
             }
         }
         //Restarts game when button pressed
@@ -118,9 +208,10 @@
                 <a href="#" class="choice" onclick="makeChoice('left')">Go Left</a>
                 <a href="#" class="choice" onclick="makeChoice('right')">Go Right</a>
             `;
-            gameData.level = 1;
-            gameData.score = 0;
-        }
+            gameData.collectedShield = false;
+            gameData.collectedSword = false;
+            gameData.collectedBoots = false;
+        } 
 
         function exportChoices() {
             //Calculate time spent playing
